fix spacing in sidebar

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
     width: 37vw;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 
 }
 
